unsupported/static_h/external/esprima/test_fixtures/es2017/async/invalid-await/invalid-await-identifier1.js
async function f() { g(await) }
